@@ -15,6 +15,7 @@
 	 * 
 	 * @see CommonDaoWorker for manual-caching one.
 	 * @see VoodooDaoWorker for greedy though non-blocking brother.
+	 * @see FileSystemDaoWorker for filesystem based child of VoodooDaoWorker.
 	 * 
 	 * @ingroup DAOs
 	**/
